Using overlay legend with QgsColorRampButton and unit vector, removed the QColorRampEditor

--- a/packages/CMakeLists.txt
+++ b/packages/CMakeLists.txt
@@ -23,6 +23,7 @@ set(Header_Files
     "include/handle_vector_layers.h"
     "include/his_cf.h"
     "include/json_reader.h"
+    "include/legend_overlay.h"
     "include/map_property.h"
     "include/map_property_window.h"
     "include/map_time_manager_window.h"
@@ -32,7 +33,6 @@ set(Header_Files
     "include/netcdf.h"
 #   "include/pattern.xpm"
     "include/perf_timer.h"
-    "include/QColorRampEditor.h"
     "include/qgis_sumesh.h"
     "include/qgis_sumesh_version.h"
 #   "include/qgis_umesh_version.h.vcs"
@@ -40,6 +40,7 @@ set(Header_Files
 #   "include/qqis_umesh_version.rc"
 #   "include/qqis_umesh_version.rc.vcs"
     "include/grid.h"
+    "include/unit_vector_overlay.h"
 #   "include/vsi.xpm"
 #   "include/vsi_disabled.xpm"
 )
@@ -56,7 +57,6 @@ set(Source_Files
     "src/MyDrawingCanvas.cpp"
 #    "src/MyEditTool.cpp"
     "src/perf_timer.cpp"
-    "src/QColorRampEditor.cpp"
     "src/qgis_sumesh.cpp"
     "src/qgis_sumesh_version.cpp"
     "src/read_json.cpp"
